# Notes-Blackwall

./: .gitignore  .mcp.json  .mcp.json.example  AI_SUIT_ASSESSMENT.md  AI_SUIT_COMPLETE.md  CLAUDE_CLOUD_AGENTS_INTEGRATION.md  CLAUDE_CLOUD_AGENTS_QUICKSTART.md  CLAUDE_CODE_CLOUD_AGENTS_SETUP.md  COORDINATION_SOLUTION.md  CROSS_CHAT_SOLUTION.md  EXPANDED_UI_SYSTEM.md  GIT_SETUP_GUIDE.md  GRAINRAD_THEME_SYSTEM.md  MCP_GATEWAY_ARCHITECTURE.md  MCP_GATEWAY_COMPLETE.md  MCP_GATEWAY_DEMONSTRATION.md  MCP_GATEWAY_FINAL_DEMO.md  MCP_GATEWAY_SUMMARY.md  MCP_INTEGRATION_ASSESSMENT.md  MCP_INTEGRATION_COMPLETE.md  MCP_INTEGRATION_TEST_GUIDE.md  MCP_TOOLBOX_INTEGRATION.md  MCP_TOOLBOX_SUMMARY.md  MCP_TOOLBOX_TEST_RESULTS.md  MCP_TOOLBOX_USE_CASES.md  OPEN_SOURCE_TOOLS_REFERENCE.md  PROOF_OF_CONCEPT_COMPLETE.md  PUSH_TO_REMOTE.md  QUICK_START_CROSS_CHAT.md  README_WORKTREE.md  SYSTEMS_COMPARISON.md  WORKTREE_SYSTEM_COMPLETE.md  docker-compose.assistant.yaml  run_orchestration.py  run_overseer.py  test_claude_code_mcp.py  test_cloud_agents_mcp.py  test_cursor_mcp_integration.md  test_mcp_connection.py  test_mcp_server_protocol.py  (+4 more)
.mcp-ui/: main.md
.overseer/: scratchpad.md  state.json
.skills/: code-analysis.md  documentation.md  protection.md
DaDumpMan/: README.md
agent-system/: .gitignore  CLAUDE_INTEGRATION.md  CLAUDE_PLUGINS_GUIDE.md  INTEGRATION_SUMMARY.md  (+19 more)
cli-hub/: README.md  pyproject.toml  requirements.txt
cli-hub/src/: dispatch.py  main.py
cli-hub/src/commands/: blackwall_cmd.py  gateway_cmd.py  infra_cmd.py  overseer_cmd.py  pipeline_cmd.py  security_cmd.py
(+613 files in other folders)
