[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cequence-cli"
version = "0.1.0"
description = "Unified CLI for Cequence BlackWall"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
cq = "src.main:cli"

[tool.setuptools.packages.find]
include = ["src*"]
